--- a/Tribute.css
+++ b/Tribute.css
@@ -17,7 +17,7 @@ body{
     background-repeat: no-repeat;
 }
 .p2{
-    background-image: url(./indian\ .jpg);
+    background-image: url(./indian.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
